[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="Control"]
script = ExtResource("1_hud")
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3
custom_constants/margin_left = 16
custom_constants/margin_top = 16
custom_constants/margin_right = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Health" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/Health"]
text = "Vida: 0 / 0"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Health"]
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="XP" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/XP"]
text = "Nivel: 1"

[node name="XPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/XP"]
size_flags_horizontal = 3
max_value = 100.0
value = 0.0

[node name="Stats" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_constants/separation = 24

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer/Stats"]
text = "Da√±o:"

[node name="DamageValue" type="Label" parent="MarginContainer/VBoxContainer/Stats"]
text = "0"

[node name="ProjectileLabel" type="Label" parent="MarginContainer/VBoxContainer/Stats"]
text = "Proyectiles:"

[node name="ProjectileValue" type="Label" parent="MarginContainer/VBoxContainer/Stats"]
text = "1"
